finishing up tweaks for beta version

--- a/FirstNationalBank/Views/Profile/ProfilePage.cshtml
+++ b/FirstNationalBank/Views/Profile/ProfilePage.cshtml
@@ -57,7 +57,7 @@
             <input type="text" id="amount"><br />
             <label>Notes: </label>
             <input type="text" id="notes"><br />
-            <input type="submit" id="submit-btn" value="Complete">
+            <button type="submit" id="submit-btn" value="Complete">Complete</button>
         </form>
     </div>
     <br />
