--- a/FirstNationalBank/wwwroot/css/profile.css
+++ b/FirstNationalBank/wwwroot/css/profile.css
@@ -53,3 +53,16 @@ td, th {
 tr:nth-child(even) {
     background-color: #dddddd;
 }
+
+button[type=submit] {
+    background-color: #D3D3D3;
+    color: black;
+    padding: 5px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+    button[type=submit]:hover {
+        background-color: #696969;
+    }
