--- a/FirstNationalBank/Views/Create/CreateAccount.cshtml
+++ b/FirstNationalBank/Views/Create/CreateAccount.cshtml
@@ -3,52 +3,129 @@
     ViewData["Title"] = "CreateAccount";
 }
 
+<link rel="stylesheet" href="~/css/create.css">
+
 <div style="background-image: url('https://image.shutterstock.com/shutterstock/photos/748798912/display_1500/stock-photo-business-office-building-lobby-blur-background-of-bank-reception-hall-customer-or-patient-counter-748798912.jpg');
        background-repeat: no-repeat;
        background-size: cover;">
-    <div style="max-width:20rem;
-            margin: 0 auto;">
 
-        <h1>Create Account</h1>
-        <br />
-        <div id="inputForm">
-            <form action="javascript:void(0);"
-                  method="POST"
-                  onsubmit="addAccount()"
-                  style="display: flex; flex-direction: column;">
-
-                <label>First name: </label>
-                <input type="text" id="add-first-name" /><br />
-                <label>Last name: </label>
-                <input type="text" id="add-last-name" /><br />
-                <label>Address: </label>
-                <input type="text" id="add-address" /><br />
-                <label>City: </label>
-                <input type="text" id="add-city" /><br />
-                <label>State: </label>
-                <input type="text" id="add-state" /><br />
-                <label>ZIP: </label>
-                <input type="text" id="add-zip" /><br />
-                <label>Mother's maiden name</label>
-                <input type="text" id="add-mmn" /><br />
-                <label>Phone: </label>
-                <input type="text" id="add-phone" /><br />
-                <label>Email: </label>
-                <input type="text" id="add-email" /><br />
-                <label>Password: </label>
-                <input type="text" id="add-password" /><br />
-                <label>Account type: </label>
-                <select name="acct-type" id="add-type">
-                    <option value="checking">Checking</option>
-                    <option value="savings">Savings</option>
-                </select><br />
-                <label>Bank Account: </label>
-                <input type="text" id="add-account" /><br />
-                <label>Initial Balance: </label>
-                <input type="text" id="add-balance" /><br />
+    <h1>Create Account</h1>
+    <br />
+    <div class="edit-container">
+        <form action="javascript:void(0);"
+              method="POST"
+              onsubmit="addAccount()">
+            <div class="row">
+                <div class="col-25">
+                    <label>First name: </label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="add-first-name" /><br />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25">
+                    <label>Last name: </label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="add-last-name" /><br />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25">
+                    <label>Address: </label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="add-address" /><br />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25">
+                    <label>City: </label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="add-city" /><br />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25">
+                    <label>State: </label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="add-state" /><br />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25">
+                    <label>ZIP: </label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="add-zip" /><br />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25">
+                    <label>Mother's maiden name</label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="add-mmn" /><br />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25">
+                    <label>Phone: </label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="add-phone" /><br />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25">
+                    <label>Email: </label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="add-email" /><br />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25">
+                    <label>Password: </label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="add-password" /><br />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25">
+                    <label>Account type: </label>
+                </div>
+                <div class="col-75">
+                    <select name="acct-type" id="add-type">
+                        <option value="checking">Checking</option>
+                        <option value="savings">Savings</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25">
+                    <label>Bank Account: </label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="add-account" /><br />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25">
+                    <label>Initial Balance: </label>
+                </div>
+                <div class="col-75">
+                    <input type="text" id="add-balance" /><br />
+                </div>
+            </div>
+            <div class="row">
                 <button type="submit" id="create-btn" onclick="">Create</button>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
 </div>
 
