button back wire up

--- a/FirstNationalBank/Views/Create/CreateAccount.cshtml
+++ b/FirstNationalBank/Views/Create/CreateAccount.cshtml
@@ -10,6 +10,8 @@
        background-size: cover;">
 
     <h1>Create Account</h1>
+    <button type="submit" id="go-back" onclick="goToHomePage()">Go back</button>
+
     <br />
     <div class="edit-container">
         <form action="javascript:void(0);"
