--- a/FirstNationalBank/Views/Edit/EditAccount.cshtml
+++ b/FirstNationalBank/Views/Edit/EditAccount.cshtml
@@ -10,6 +10,8 @@
        background-size: cover;">
 
     <h1>Edit Account</h1>
+    <button type="submit" id="go-back" onclick="goToProfilePage()">Go back</button>
+
     <br />
     <div class="edit-container">
         <form action="javascript:void(0);" method="POST" onsubmit="">
