update account wire up

--- a/FirstNationalBank/Views/Edit/EditAccount.cshtml
+++ b/FirstNationalBank/Views/Edit/EditAccount.cshtml
@@ -117,7 +117,7 @@
             </div>
             <br />
             <div class="row">
-                <button type="submit" class="floated" id="update-btn" onclick="">Update</button>
+                <button type="submit" class="floated" id="update-btn" onclick="updateAccount()">Update</button>
                 <button type="submit" class="floated" id="delete-btn" onclick="">Delete</button>
             </div>
         </form>
