delete web api wire up

--- a/FirstNationalBank/Views/Edit/EditAccount.cshtml
+++ b/FirstNationalBank/Views/Edit/EditAccount.cshtml
@@ -118,7 +118,7 @@
             <br />
             <div class="row">
                 <button type="submit" class="floated" id="update-btn" onclick="updateAccount()">Update</button>
-                <button type="submit" class="floated" id="delete-btn" onclick="">Delete</button>
+                <button type="submit" class="floated" id="delete-btn" onclick="deleteAccount(acctId)">Delete</button>
             </div>
         </form>
     </div>
