--- a/FirstNationalBank/Views/Profile/ProfilePage.cshtml
+++ b/FirstNationalBank/Views/Profile/ProfilePage.cshtml
@@ -29,9 +29,12 @@
 
 <div class="main-profile">
     <h2>Welcome to your Account!</h2>
+    <div style="text-align: right;">
+        <button type="submit" id="log-out-btn" onclick="logOut()"><i class="fa fa-sign-out"></i> Log out</button>
+    </div>
     <div class="header">
         <h4><a id="acct-type"></a> account: <a id="add-account"></a></h4><br />
-        <button type="submit" id="account-settings" onclick="redirectToEditAccount()">Account settings</button>
+        <button type="submit" id="account-settings" onclick="redirectToEditAccount()"><i class="fa fa-cog"></i> Account settings</button>
     </div>
 
     <div style="display: inline-block">
