--- a/FirstNationalBank/Views/Home/Index.cshtml
+++ b/FirstNationalBank/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
+@* Hello from Misho *@
+
 <link rel="stylesheet" href="~/css/index.css">
 
 <div class="videoDIV" id="videoDiv">
